# rinha-de-backend-2025-fastapi

./: .flake8  Dockerfile  README.md  docker-compose.yml  justfile  nginx.conf  pyproject.toml
api/: .dockerignore  pyproject.toml
api/app/: config.py  main.py  worker.py
api/app/models/: payments.py
api/app/processors/: payment.py
api/app/routes/: payments.py  summary.py
api/app/shared/: dependency.py  model.py
app/: config.py  main.py
app/models/: summary.py
app/processors/: payment.py
app/routes/: payments.py  summary.py
app/shared/: dependency.py
worker/: Dockerfile  justfile  pyproject.toml
worker/app/: config.py  main.py  models.py  processor.py
